pass1/String/271_Encode_and_Decode_Strings_M_acpt/log
solution.cpp: In function 'int main()':
solution.cpp:82:47: error: conversion from 'std::vector<std::basic_string<char> >' to non-scalar type 'std::string {aka std::basic_string<char>}' requested
     string s = codec.decode(codec.encode(strs));
                                               ^
